components/forms/form.module.css
.hero {
  display: flex;
  width: 100%;
  min-height: calc(100vh - 100px);
  flex-direction: column;
  justify-content: center;
  padding-top: 16px;
}

.form_background_work {
  --bg-color: rgb(11 115 254);

  background-color: var(--bg-color);
  box-shadow: 0 0 0 100vmax var(--bg-color);
  clip-path: inset(0 -100vmax);
}

.form_work {
  padding: 30px;
  border-radius: 30px;
  background-color: rgb(173 21 129);
  box-shadow: rgb(0 0 0 / 25%) 0 4px 4px;
}

.hero_title {
  text-align: center;
}

.form_container {
  display: flex;
}

#form_item_description_textarea {
  resize: none;
}

.email_type {
  display: flex;
  gap: 8px;
}

.image_container {
  width: 100%;
  flex: 1 1 0;
  padding-top: 80px;
}

.image {
  width: 100%;
  object-fit: contain;
}

.form {
  display: flex;
  width: 100%;
  flex-direction: column;
  padding: 16px 0;
  gap: 16px;
}

.form_item {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.date_orig {
  display: flex;
  flex-basis: 10%;
  gap: 8px;
}

.date_orig_container {
  display: flex;
  gap: 8px;
}

.date_orig > * {
  flex-basis: 50%;
}

.input_container {
  position: relative;
  display: -webkit-box;
  display: flex;
  display: flexbox;
  display: flex;
  min-height: 45px;
  box-sizing: border-box;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  border-width: 1px;
  border-style: solid;
  border-color: hsl(0deg 0% 20%);
  border-radius: 15px;
  background-color: hsl(0deg 0% 100%);
  -webkit-box-align: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-box-pack: justify;
  cursor: default;
  -ms-flex-align: center;
  outline: 0 !important;
  transition: all 100ms;
}

.label {
  padding-left: 6px;
  color: hsl(0deg 0% 50%);
  font-size: 14px;
}

.label_checkbox {
  display: flex;
  align-items: center;
  padding-left: 8px;
  gap: 4px;
}

.headline {
  padding-left: 6px;
  color: rgb(255 242 137);
  font-size: 14px;
}

.input {
  width: 100%;
  min-width: 100%;

  /* height: 100%; */

  /* align-self: flex-start; */
  padding: 10px;
  border: none;
  border-radius: inherit;
  background: none;
  color: hsl(0deg 0% 20%);
  font-family: Roboto, "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 16px;
  text-align: start;
}

.input::-webkit-date-and-time-value {
  text-align: left;
}

.input::placeholder {
  color: hsl(0deg 0% 70%);
  font-size: 14px;
}

.error_label {
  padding-left: 10px;
  color: rgb(187 62 62);
}

.submit_error {
  padding-top: 8px;
  color: rgb(187 62 62);
}

.submit_button_container {
  display: flex;
  flex-direction: column;
  gap: 8px;
  text-align: center;
}

.modal_overlay {
  position: fixed;
  z-index: 30;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: hsl(0deg 0% 20% 80%);
}

.modal {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 32px 64px;
  border-radius: 30px;
  background: hsl(0deg 0% 100%);
  box-shadow: 0 8px 24px rgb(129 135 189 15%);
  gap: 24px;
  text-align: center;
}

@media screen and (min-width: 1366px) {
  .hero {
    padding-top: 8px;
  }

  .form_container {
    gap: 32px;
  }
}

@media screen and (min-width: 1024px) {
  .hero {
    flex-basis: 50%;
  }

  .image_container {
    flex-basis: 50%;
  }

  .date_orig_container {
    flex-basis: 60%;
  }

  .form_item#form_item_originality,
  .form_item#form_item_due_date,
  .form_item#form_item_anti_plagiarism,
  .form_item#form_item_email,
  .form_item#form_item_type {
    flex: 1;
  }

  .modal {
    height: 40%;
  }

  .form_work {
    width: 50%;
    align-self: center;
  }
}

@media screen and (max-width: 1023px) {
  .hero {
    width: 100%;
    height: unset;
    padding-top: 0;
  }

  .image_container {
    display: none;
  }

  .date_orig_container {
    flex-basis: 60%;
  }

  .form_item#form_item_originality,
  .form_item#form_item_due_date,
  .form_item#form_item_anti_plagiarism,
  .form_item#form_item_email,
  .form_item#form_item_type {
    flex: 1;
  }
}

@media screen and (max-width: 768px) {
  .hero {
    width: 100%;
    align-items: center;
    justify-content: center;
    text-align: left;
  }

  .image_container {
    display: none;
  }

  .date_orig {
    display: flex;
    flex-basis: unset;
    flex-direction: column;
  }

  .date_orig_container {
    display: flex;
    flex-direction: row;
    gap: 8px;
  }

  .email_type {
    flex-direction: column;
  }

  .modal {
    width: 100%;
    height: 100%;
    padding: 16px;
    border-radius: 0;
    gap: 32px;
  }
}

